2003-11-11  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/crc16.h (_crc16_update): Add dox.
	(_crc_xmodem_update): New function.

2003-11-04  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* libc/pmstring/strlcat_P.S: Use correct dox group (fix for bug #6359).
	* libc/pmstring/strlcpy_P.S: Use correct dox group (fix for bug #6359).

2003-10-20  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iom128.h:
	* include/avr/portpins.h:
	Move generic PORTn, DDn and PINn defs to portpins.h.

2003-10-20  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/io.h: Include portpins.h.
	* include/avr/portpins.h: New file.
	* include/avr/ioat94k.h: Convert PORTxn to Pxn.
	* include/avr/iom128.h: Convert PORTxn to Pxn.
	* include/avr/iom162.h: Convert PORTxn to Pxn.
	* include/avr/iom64.h: Convert PORTxn to Pxn.
	* include/avr/iotn15.h: Convert PORTxn to Pxn.

2003-10-18  Theodore A. Roth  <troth@openavr.org>
[Fix for Bug #5976]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/faq.dox: Use pgm_read_byte() instead of __lpm_inline() in the
	debug_P() example.
	* include/stdlib.h (itoa): Add note and warning about minimal buffer
	size to dox.
	(ltoa): Ditto.
	(utoa): Ditto.
	(ultoa): Ditto.

2003-10-17  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom162.h: Change PE[01] to UPE[01]. [Bug #5799]

2003-10-16  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Add note about new vfprintf_P and vfscanf_P functions.
	* include/stdio.h: Add prototypes and dox for vfprintf_P and vfscanf_P.
	* libc/stdio/Makefile.am (lib_a_c_sources): Add vfprintf_p.c and
	vfscanf_p.c.
	* libc/stdio/vfprintf_p.c: New file.
	* libc/stdio/vfscanf_p.c: New file.

2003-10-09  Theodore A. Roth  <troth@openavr.org>
